# AiSound

./: .gitignore  README.md  build.gradle  configs.gradle  gradle.properties  settings.gradle
aisound/: CMakeLists.txt  build.gradle
aisound/src/main/: AndroidManifest.xml
aisound/src/main/cpp/: aisound.cpp  aisound.h
aisound/src/main/cpp/inc/: fmod.h  fmod.hpp  fmod_codec.h  fmod_common.h  fmod_dsp.h  fmod_dsp_effects.h  fmod_errors.h  fmod_output.h
aisound/src/main/java/io/microshow/aisound/: AiSound.java
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/io/microshow/aisoundapp/: VoiceActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
